--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture in Picture</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
@@ -57,13 +59,6 @@
     </div>
     <!-- Script -->
     <script src="js/script.js"></script>
-    <script>
-        if ("serviceWorker" in navigator) {
-            navigator.serviceWorker.register("service-worker.js").then(() => {
-                console.log("Service Worker Registered");
-            });
-        }
-    </script>
 </body>
 
 </html>
