--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture in Picture</title>
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/mafari10/manifest.json" />
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
