--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <html lang="en">
 
 <head>
-    <base href="mafari10/">
+    <base href="/">
     <meta charset="UTF-8">
     <meta name="theme-color" content="#000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon" href="/mafari10/assets/icons/icon-192x192.png">
     <title>Picture in Picture</title>
-    <link rel="manifest" href="/mafari10/manifest.json">
-    <link rel="stylesheet" href="/mafari10/assets/css/styles.css">
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
