--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="theme-color" content="#000000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture in Picture</title>
+    <!-- Add this to your <head> -->
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="manifest" href="./manifest.json" />
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
